--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,5 +1,5 @@
 ﻿<div class="logined-view col-md-offset-3 col-sm-offset-1 col-xs-offset-0">
-    <h1>Hi {{currentUser.gender}}!</h1>
+    <h1>Hi {{currentUser.username}}!</h1>
     <img src="" id="photo" />
     <p>Here is some weather forecast for you:</p>
     <div id="openweathermap-widget-15"></div>
